# HairSimulation-OpenGL

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Dependencies/: CMakeLists.txt
Dependencies/GLAD/: CMakeLists.txt
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
src/: CMakeLists.txt  Camera.cpp  Camera.h  ComputeShader.cpp  ComputeShader.h  Cube.cpp  Cube.h  DrawingShader.cpp  DrawingShader.h  Entity.cpp  Entity.h  Hair.cpp  Hair.h  Pathconfig.h.in  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/Shaders/: BasicFragmentShader.glsl  BasicVertexShader.glsl  HairComputeShader.glsl  HairFragmentShader.glsl  HairGeometryShader.glsl  HairVertexShader.glsl  LightFragmentShader.glsl  LightVertexShader.glsl  SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl
